load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "example_go_proto",
    importpath = "github.com/FormantIO/formant/ts/packages/toolkit/examples/protobufjs-communication/protos",
    proto = ":example_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protos",
    embed = [":example_go_proto"],
    importpath = "github.com/FormantIO/formant/ts/packages/toolkit/examples/protobufjs-communication/protos",
    visibility = ["//visibility:public"],
)
