<?xml version="1.0"?>
<package format="2">
  <name>ROS Bag Adapter</name>
  <version>1.0.0</version>
  <description>C++ ROS Bag recorder</description>
  <maintainer email="franklin@formant.io">Franklin</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
